initial infra manager setup
